          
          The old multisend button is gone, however, if you are in *any* multisend mode, an
          icon will appear left of the input box, indicating that the message you are typing
          *may* be sent to more than a single contact.

        ! applying any options does no longer hide the error controls, if the window/tab is in
          "error state".
          
Version 0.9.9.5a - 2005/02/22

        Bugfix release only.
        
        ! tab icons were partially broken because of the "load icon pack at runtime" feature.
        
        ! The menu entry to select in/out icons did not work properly.
        
        ! when loading a new icon pack at runtime, all message windows will be closed before
          applying the new icons. A dialog box will inform you about this and you can, of course,
          cancel the process.
          
        ! the "protocol menu" button was visible, even it does not (yet) provide any functionality.

        ! The option "do not resize avatars less than x pixels in height" should now work ok.
        
        ! fixed possible problem with unicode detection.
        
Version 0.9.9.5 - 2005/02/17

        First, this requires a new tabsrmm_icons.dll format. Icons have been added , so you'll
        need to upgrade your icon packs. You can use the provided .DLL files as a template
        as always. The new ordinal numbers are:
        
        #19 secureim disabled
        #20 secured connection
        
        19 and 20 are only necessary, if you have a tabsrmm compatible SecureIM.dll (which
        is not yet available).
        
        #21 this icon is now used for status changes
        
        + merged std's patch for improved indenting with tabstops. This option works best
          with the following msg log settings:
          *) grouping enabled
          *) message body in a new line
          *) mark followup messages with timestamps
          